--- a/templates/officeModule/officeOfRegistrar/purchaseAndSales_content1.html
+++ b/templates/officeModule/officeOfRegistrar/purchaseAndSales_content1.html
@@ -43,19 +43,53 @@
         </td>
 
         <td>
-            ...
+            5478
         </td>
 
         <td>
-            ...
+            10/04/18
         </td>
 
         <td>
-            ...
+            Buy 8 Projectors
         </td>
 
         <td>
             <i class="large green checkmark icon"></i>
+        </td>
+
+        <td>
+            {% comment %}
+                TODO: Add the attachment here!
+            {% endcomment %}
+            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
+                <i class="large attach black icon"></i>
+            </a>
+        </td>
+    </tr>
+
+     <tr>
+
+        <td class="collapsing">
+            <div class="ui fitted checkbox">
+                <input type="checkbox"> <label></label>
+            </div>
+        </td>
+
+        <td>
+            6478
+        </td>
+
+        <td>
+            08/04/18
+        </td>
+
+        <td>
+            Purchase 3 Fans
+        </td>
+
+        <td>
+            <i class="large red remove icon"></i>
         </td>
 
         <td>
