--- a/templates/officeModule/officeOfRegistrar/uploadDocs.html
+++ b/templates/officeModule/officeOfRegistrar/uploadDocs.html
@@ -2,7 +2,7 @@
 
 
 
- <form>
+ <form action="/addDocument/" method="post" >
     {% comment %}The add a new skill Accordian starts here!{% endcomment %}
     <div class="ui form" style="padding: 8px; padding-left: 24px; padding-right: 24px;">
 
