Improved Approve Committee Area

--- a/templates/officeModule/officeOfRegistrar/purchaseAndSales_content2.html
+++ b/templates/officeModule/officeOfRegistrar/purchaseAndSales_content2.html
@@ -27,6 +27,10 @@
             Status
         </th>
 
+        <th class="three wide column">
+            Members
+        </th>
+
         <th class="one wide column">
             Attachment
         </th>
@@ -43,19 +47,24 @@
         </td>
 
         <td>
-            ...
+            5482
         </td>
 
         <td>
-            ...
+            09/04/2018
         </td>
 
         <td>
-            ...
+            Buy 3 Ac
         </td>
 
         <td>
             <i class="large green checkmark icon"></i>
+        </td>
+
+         <td rowspan="2">
+            1. Janesh Behera
+             2.Rahul Gupta
         </td>
 
         <td>
