Removed Create Document Link

--- a/templates/officeModule/officeOfRegistrar/officeOfRegistrar.html
+++ b/templates/officeModule/officeOfRegistrar/officeOfRegistrar.html
@@ -72,10 +72,10 @@
                     <i class="right floated chevron right icon"></i>
                 </a>
 
-                 <a class="item" data-tab="seventh">
-                    Create Documents
-                    <i class="right floated chevron right icon"></i>
-                </a>
+                 <!--<a class="item" data-tab="seventh">-->
+                    <!--Create Documents-->
+                    <!--<i class="right floated chevron right icon"></i>-->
+                <!--</a>-->
 
                  <a class="item" data-tab="eight">
                     Archive
