updated user interfaces and added models

--- a/templates/officeModule/officeOfRegistrar/directorSection_content1.html
+++ b/templates/officeModule/officeOfRegistrar/directorSection_content1.html
@@ -21,24 +21,25 @@
     </thead>
 
     <tbody>
+    {% for views in view %}
     <tr>
         <td>
-            ...
+           {{view.file_name}}
         </td>
 
         <td>
-            ...
+            {{view.date}}
         </td>
 
         <td>
-            ...
+           {{view.purpose}}
         </td>
 
         <td>
             <i class="large orange warning icon"></i>
         </td>
     </tr>
-
+    {% endfor %}
     </tbody>
 </table>
 
