--- a/templates/officeModule/officeOfRegistrar/generalAdministration_content1.html
+++ b/templates/officeModule/officeOfRegistrar/generalAdministration_content1.html
@@ -14,7 +14,7 @@
         </th>
 
         <th class="eight wide column">
-            Purpose
+            Amount
         </th>
 
         <th>
@@ -36,19 +36,21 @@
         </td>
 
         <td>
-            ...
+            5432
         </td>
 
         <td>
-            ...
+            11/04/18
         </td>
 
         <td>
-            ...
+            50027
         </td>
 
         <td>
-            ...
+           <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
+                <i class="large attach black icon"></i>
+            </a>
         </td>
 
         <td>
