working of establishment

--- a/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
+++ b/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
@@ -43,7 +43,7 @@
         <td>
             <h4 class="ui image header">
                 <div class="content">
-                    {{view3.person_name}}
+                    {{views.person_name}}
                     <div class="sub header">
                         janesh@iiitdmj.ac.in
                     </div>
@@ -52,15 +52,15 @@
         </td>
 
         <td>
-            {{view3.date}}
+            {{views.date}}
         </td>
 
         <td>
-           {{view3.post}}
+           {{views.post}}
         </td>
 
         <td>
-            {{view3.duration}}
+            {{views.duration}}
         </td>
 
         <td>
@@ -68,7 +68,7 @@
                             TODO: Add the attachment here!
                         {% endcomment %}
             <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
-                <i class="large attach black icon">{{view3.file}}</i>
+                <i class="large attach black icon">{{views.file}}</i>
             </a>
         </td>
     </tr>
