--- a/templates/officeModule/officeOfRegistrar/directorSection_content1.html
+++ b/templates/officeModule/officeOfRegistrar/directorSection_content1.html
@@ -21,18 +21,18 @@
     </thead>
 
     <tbody>
-    {% for views in view %}
+    {% for views in view2 %}
     <tr>
         <td>
-           {{view.file_name}}
+           {{views.file_name}}
         </td>
 
         <td>
-            {{view.date}}
+            {{views.date}}
         </td>
 
         <td>
-           {{view.purpose}}
+           {{views.purpose}}
         </td>
 
         <td>
