--- a/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
+++ b/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
@@ -45,7 +45,7 @@
                 <div class="content">
                     {{views.person_name}}
                     <div class="sub header">
-                        janesh@iiitdmj.ac.in
+                       {{views.person_mail_id}}
                     </div>
                 </div>
             </h4>
