--- a/templates/officeModule/officeOfRegistrar/purchaseAndSales_content2.html
+++ b/templates/officeModule/officeOfRegistrar/purchaseAndSales_content2.html
@@ -1,33 +1,93 @@
-<form>
-    {% comment %}The add a new skill Accordian starts here!{% endcomment %}
-    <div class="ui form" style="padding: 8px; padding-left: 24px; padding-right: 24px;">
+{% load static %}
 
-        <div class="two fields">
-            <div class="field">
-                <label>Name</label>
-                <input value="Zlatan Ibrahimovic" class="ui large input">
+<table class="ui very basic collapsing celled sortable table"
+       style="padding-left: 2.5%;
+                                                          padding-right: 2.5%;
+                                                          padding-top: 1%;
+                                                          padding-bottom: 1.5%;
+                                                          margin: auto;">
+    <thead>
+    <tr>
+        <th class="one wide column">
+        </th>
+
+        <th class="three wide column">
+            File Number
+        </th>
+
+        <th class="three wide column">
+            Date
+        </th>
+
+        <th class="seven wide column">
+            Purpose
+        </th>
+
+        <th class="one wide column">
+            Status
+        </th>
+
+        <th class="one wide column">
+            Attachment
+        </th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr>
+
+        <td class="collapsing">
+            <div class="ui fitted checkbox">
+                <input type="checkbox"> <label></label>
             </div>
+        </td>
 
-            <div class="field">
-                <label>Money</label>
-                <input value="..." class="ui large input">
-            </div>
-        </div>
+        <td>
+            ...
+        </td>
 
-        <div class="field">
-            <label>Purpose</label>
-            <textarea rows="2"></textarea>
-        </div>
+        <td>
+            ...
+        </td>
 
-        <div class="field">
-            <button class="ui primary button right floated" type="submit">
-                Submit
-            </button>
-        </div>
+        <td>
+            ...
+        </td>
 
-    </div>
-</form>
+        <td>
+            <i class="large green checkmark icon"></i>
+        </td>
+
+        <td>
+            {% comment %}
+                TODO: Add the attachment here!
+            {% endcomment %}
+            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
+                <i class="large attach black icon"></i>
+            </a>
+        </td>
+    </tr>
+
+    </tbody>
+</table>
+
+
+<br>
+
+<div class="ui primary right floated button">Approve Selected</div>
+<div class="ui green right floated button">Forward Selected</div>
+<div class="ui red right floated button">Reject Selected</div>
+
 
 <br>
 <br>
 <div class="ui divider"></div>
+
+<div class="extra content">
+    <div class="" style="text-align: center;">
+        <i class="large green checkmark icon"></i> : Approved &ensp;&ensp;&ensp;&ensp;&ensp;
+        <i class="large orange warning icon"></i> : Pending &ensp;&ensp;&ensp;&ensp;&ensp;
+        <i class="large red x icon"></i> : Declined
+    </div>
+</div>
+
