--- a/templates/officeModule/officeOfRegistrar/archive.html
+++ b/templates/officeModule/officeOfRegistrar/archive.html
@@ -32,6 +32,7 @@
     </thead>
 
     <tbody>
+    {% for views in view %}
     <tr>
 
         <td class="collapsing">
@@ -41,46 +42,15 @@
         </td>
 
         <td>
-            4587
+            {{views.id}}
         </td>
 
         <td>
-            11/04/18
+
         </td>
 
         <td>
-            Release Notice
-        </td>
-
-        <td>
-            {% comment %}
-                TODO: Add the attachment here!
-            {% endcomment %}
-            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
-                <i class="large attach black icon"></i>
-            </a>
-        </td>
-    </tr>
-
-
-     <tr>
-
-        <td class="collapsing">
-            <div class="ui fitted checkbox">
-                <input type="checkbox"> <label></label>
-            </div>
-        </td>
-
-        <td>
-            4589
-        </td>
-
-        <td>
-            10/04/18
-        </td>
-
-        <td>
-            New Guideline
+            {{views.purpose}}
         </td>
 
         <td>
@@ -92,6 +62,9 @@
             </a>
         </td>
     </tr>
+
+{% endfor %}
+
 
     </tbody>
 </table>
