--- a/templates/officeModule/officeOfRegistrar/createDocs.html
+++ b/templates/officeModule/officeOfRegistrar/createDocs.html
@@ -1,28 +1,29 @@
 {% block tab7 %}
 
- <form>
+ <form method="post" action="{% url 'office:docsubmit' %}">
+      {% csrf_token %}
     {% comment %}The add a new skill Accordian starts here!{% endcomment %}
     <div class="ui form" style="padding: 8px; padding-left: 24px; padding-right: 24px;">
 
         <div class="two fields">
             <div class="field">
                 <label>Document Name</label>
-                <input value="Notice_1" class="ui large input">
+                <input value="Notice_1" class="ui large input" name="docname">
             </div>
 
             <div class="field">
                 <label>Purpose</label>
-                <input value="Regarding ..." class="ui large input">
+                <input value="Regarding ..." class="ui large input" name="purpose">
             </div>
         </div>
 
         <div class="field">
             <label>Description</label>
-            <textarea rows="10"></textarea>
+            <textarea rows="10" name="description"></textarea>
         </div>
 
-        <div class="ui green right floated button">Forward</div>
-        <div class="ui primary right floated button">Save</div>
+        <button class="ui green right floated button" type="submit">Forward</button>
+        <button class="ui primary right floated button" type="submit">Save</button>
 
     </div>
 </form>
