--- a/templates/officeModule/officeOfRegistrar/uploadDocs.html
+++ b/templates/officeModule/officeOfRegistrar/uploadDocs.html
@@ -2,35 +2,36 @@
 
 
 
- <form action="/addDocument/" method="post" >
+ <form  method="post" action="{% url 'office:uploaddoc' %}">
+     {% csrf_token %}
     {% comment %}The add a new skill Accordian starts here!{% endcomment %}
     <div class="ui form" style="padding: 8px; padding-left: 24px; padding-right: 24px;">
 
         <div class="two fields">
             <div class="field">
                 <label>Document Name</label>
-                <input value="New File" class="ui large input">
+                <input value="New File" class="ui large input" name="docname">
             </div>
 
             <div class="field">
                 <label>Purpose</label>
-                <input value="For ..." class="ui large input">
+                <input value="For ..." class="ui large input" name="purpose">
             </div>
         </div>
 
         <div class="field">
             <label>Description</label>
-            <textarea rows="2"></textarea>
+            <textarea rows="2" name="description"></textarea>
         </div>
 
         <div>
     <label for="file" class="ui primary medium button">
         <i class="file icon"></i>
         Upload Scanned File</label>
-    <input type="file" id="file" style="display:none">
+    <input type="file" id="file" style="display:none" name="upload">
 </div>
-        <div class="ui green right floated button">Forward</div>
-        <div class="ui primary right floated button">Save</div>
+        <button class="ui green right floated button" type="submit">Forward</button>
+        <button class="ui primary right floated button" type="submit">Save</button>
 
     </div>
 </form>
