--- a/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
+++ b/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
@@ -67,7 +67,7 @@
             {% comment %}
                             TODO: Add the attachment here!
                         {% endcomment %}
-            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
+            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href= "{{ views.file.url }}">
                 <i class="large attach black icon">{{views.file}}</i>
             </a>
         </td>
