--- a/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
+++ b/templates/officeModule/officeOfRegistrar/establishmentSection_content1.html
@@ -36,7 +36,7 @@
 
         <td class="collapsing">
             <div class="ui fitted checkbox">
-                <input type="checkbox"> <label></label>
+                <input type="checkbox" id="{{views.id}}"> <label></label>
             </div>
         </td>
 
@@ -79,8 +79,8 @@
 
 <br>
 
-<div class="ui primary right floated button">Approve Selected</div>
-<div class="ui red right floated button">Reject Selected</div>
+<div class="ui primary right floated button" onclick="submit">Approve Selected</div>
+<div class="ui red right floated button" >Reject Selected</div>
 
 <br>
 <br>
