--- a/templates/officeModule/officeOfRegistrar/directorSection_content1.html
+++ b/templates/officeModule/officeOfRegistrar/directorSection_content1.html
@@ -1,7 +1,16 @@
+
+{% load static %}
 <table class="ui very basic collapsing celled sortable table"
-       style="padding-left: 2.5%; padding-right: 2.5%;padding-top: 1%; padding-bottom: 1.5%; margin: auto;">
+       style="padding-left: 2.5%;
+                                                          padding-right: 2.5%;
+                                                          padding-top: 1%;
+                                                          padding-bottom: 1.5%;
+                                                          margin: auto;">
     <thead>
     <tr>
+        <th class="one wide column">
+        </th>
+
         <th class="three wide column">
             File Number
         </th>
@@ -10,39 +19,82 @@
             Date
         </th>
 
-        <th class="eight wide column">
+        <th class="seven wide column">
             Purpose
         </th>
 
-        <th>
+        <th class="one wide column">
             Status
+        </th>
+
+        <th class="one wide column">
+            Remark
+        </th>
+
+        <th class="one wide column">
+            Attachment
         </th>
     </tr>
     </thead>
 
     <tbody>
-    {% for views in view2 %}
+    {% for views in view4  %}
+    {% for views in view5  %}
     <tr>
-        <td>
-           {{views.file_name}}
+
+        <td class="collapsing">
+            <div class="ui fitted checkbox">
+                <input type="checkbox"> <label></label>
+            </div>
         </td>
 
         <td>
-            {{views.date}}
+            {{ views.item_name }}
         </td>
 
         <td>
-           {{views.purpose}}
+            {{ views.purchase_date }}
         </td>
 
         <td>
-            <i class="large orange warning icon"></i>
+            {{ views.purpose }}
+        </td>
+
+        <td>
+            <i class="large green checkmark icon"></i>
+        </td>
+
+        <td>
+            <div class="ui fitted textbox">
+            <input type="textbox"><label></label>
+            </div>
+        </td>
+
+        <td>
+            {% comment %}
+                TODO: Add the attachment here!
+            {% endcomment %}
+            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="{{ views.quotation1.url }}">
+                <i class="large attach black icon">{{ views.quotation1 }}</i>
+            </a>
         </td>
     </tr>
+
+
+    {% endfor %}
     {% endfor %}
     </tbody>
 </table>
 
+
+<br>
+
+<div class="ui primary right floated button">Approve Selected</div>
+<div class="ui green right floated button">Forward Selected</div>
+<div class="ui red right floated button">Reject Selected</div>
+
+
+<br>
 <br>
 <div class="ui divider"></div>
 
