DONE CHANGES IN SOME FRONTEND AND VIEWS AND FILES
DONE CHANGES IN SOME FRONTEND AND VIEWS AND FILES

--- a/templates/officeModule/officeOfRegistrar/archive.html
+++ b/templates/officeModule/officeOfRegistrar/archive.html
@@ -57,7 +57,7 @@
             {% comment %}
                 TODO: Add the attachment here!
             {% endcomment %}
-            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
+            <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="/media/{{ views.file }}">
                 <i class="large attach black icon"></i>
             </a>
         </td>
