--- a/templates/officeModule/officeOfRegistrar/generalAdministration_content1.html
+++ b/templates/officeModule/officeOfRegistrar/generalAdministration_content1.html
@@ -28,36 +28,41 @@
     </thead>
 
     <tbody>
+    {%for views in general%}
     <tr>
         <td class="collapsing">
             <div class="ui fitted checkbox">
-                <input type="checkbox"> <label></label>
+                <input name="selected" type="checkbox" value="{{ views.id }}"> <label></label>
             </div>
         </td>
 
         <td>
-            5432
+           {{ views.file_name }}
         </td>
 
         <td>
-            11/04/18
+            {{ current_date }}
         </td>
 
         <td>
-            50027
+            {{ views.amount }}
         </td>
 
         <td>
-           <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="">
-                <i class="large attach black icon"></i>
+           <a class="ui inverted circular icon button" style="margin: auto;" target="_blank" href="{{ views.file.url }}">
+                <i class="large attach black icon">{{ views.file }}</i>
             </a>
         </td>
 
         <td>
-            <i class="large green checkmark icon"></i>
+            {% if views.status == 1 %}
+                <i class="large green checkmark icon"></i>
+            {% else %}
+                <i class="large red x icon"></i>
+            {% endif %}
         </td>
     </tr>
-
+    {%endfor%}
     </tbody>
 </table>
 
@@ -65,7 +70,7 @@
 
 <div class="ui primary right floated button">Approve Selected</div>
 <div class="ui green right floated button">Forward Selected</div>
-<div class="ui red right floated button">Reject Selected</div>
+<div id="reject" class="reject ui red right floated button">Reject Selected</div>
 
 
 <br>
@@ -79,3 +84,26 @@
         <i class="large red x icon"></i> : Declined
     </div>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function(event){
+        $(document).on("click", "div.reject", function(event){
+            var checked = [];
+            $("input[name=selected]:checked").each(function(e){
+                checked.push(parseInt($(this).val()));
+            });
+            console.log("chal gaya");
+            $.ajax({
+                type: "POST",
+                url: "/office/officeOfRegistrar/generalAdminForm/reject/",
+                data: {"csrfmiddlewaretoken": "{{ csrf_token }}", "selected":checked},
+                success: function(data){
+                    console.log("success",data);
+                },
+                error: function(data){
+                    console.log("error", data);
+                },
+            });
+        });
+    });
+</script>
